--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,260 @@
+2018-05-17: 4.1.0
+
+- Many thanks to @imresamu for name translations and Wikidata concordances, @mattbloch
+  for MapShaper feature development, and hat tips to @planemad for Wikipedia concordances
+  and @thisisaaronland for ne_id work with Brooklyn Integers. Also to @randymeech and
+  @bcamper at Mapzen (RIP) for sponsoring this work as a parting gift to the geo family.
+
+GENERAL
+
+1) Expands the name localization added in v4.0 to 21 languages (up from 7) and several
+   dozen themes expanding from populated places to include all admin-0, admin-1,
+   rivers, lakes, playas, geographic lines, physical labels, parks, airports, ports, and
+   more. As part of this work a new unique and stable "ne_id" has been added for any
+   feature with a name translation &/or a Wikidata ID concordance. The full list of
+   languages is: name_ar*, name_bn*, name_de, name_en, name_es, name_fr, name_el*,
+   name_hi*, name_hu*, name_id*, name_it*, name_ja*, name_ko*, name_nl*, name_pl*,
+   name_pt, name_ru, name_sv*, name_tr*, name_vi*, and name_zh. (Names with * indicate
+   new language in v4.1 series.) A 2-character language code decoder ring is here:
+   https://en.wikipedia.org/wiki/List_of_ISO_639-2_codes.
+2) Fixes admin-0 polygons for for Bosnia & Herzegovina to restore the
+   Republic Srpska and the Brcko District condominium.
+3) Fixes physical label polygons to restore full geometries.
+4) Switches to MapShaper for topology building and joining of attributes for all
+   administrative themes and 10m land and ocean themes. Some shapes were adjusted to
+   fit new snapping tolerances.
+
+PACKAGES
+
+- UPDATED:  NATURAL_EARTH_QUICK_START
+- UPDATED:  10M_CULTURAL
+- UPDATED:  10M_PHYSICAL
+- UPDATED:  50M_CULTURAL
+- UPDATED:  50M_PHYSICAL
+- UPDATED:  110M_CULTURAL
+- UPDATED:  110M_PHYSICAL
+- UPDATED:  ALL SHP
+- UPDATED:  SQLite
+- UPDATED:  GeoJSON
+
+NATURAL_EARTH_QUICK_START
+
+- UPDATED:  Natural Earth quick start kit v3 provides a QGIS3 config with project
+            variables that enable preferred and fallback labels for all map features
+            at zooms 0 thru zoom 8, with theme content compiled per zoom.
+            - project_language (eg: name_jp)
+            - project_language_fallback (name)
+            - project_label_function (a coalesce of preferred and fallback names)
+            - project_abbrev_function (a coalesce for abbreviated names)
+
+HOUSEKEEPING
+
+- UPDATED:  NE_ADMIN_0_DETAILS - Spreadsheet tracks admin-0 countries and other levels.
+            Adds localized names in 21 languages, Wikidata ID concordances, and ne_id.
+            Switched from Excel format to OpenOffice format (population and GDP are often
+            formulas so can't be DBF format).
+TOOLS
+
+- NEW:		Adds Python script to source unique and stable ne_id from Brooklyn Integers.
+- NEW:		Adds scripts for polling Wikidata and Wikipedia for names localizations.
+
+10M_CULTURAL
+
+- UPDATED:  ne_10m_admin-0 themes, including:
+			ne_10m_admin_0_sovereignty
+			ne_10m_admin_0_countries
+			ne_10m_admin_0_countries_lakes
+			ne_10m_admin_0_map_units
+			ne_10m_admin_0_map_subunits
+			ne_10m_admin_0_scale_rank
+			ne_10m_admin_0_scale_rank_minor_islands
+			ne_10m_admin_0_boundary_lines_land
+            ne_10m_admin_0_boundary_lines_disputed_areas
+			ne_10m_admin_0_disputed_areas
+			ne_10m_admin_0_disputed_areas_scale_rank_minor_islands
+			ne_10m_admin_0_label_points
+            - Restored missing polygons for Bosnia & Herzegovina's Republic Srpska and
+              Brcko District condominium.
+              Fixes: #239 and #104. Thanks @systemcatch, @tombor, @lcapel, @raybellwaves,
+              and @brookeeharding.
+            - Adds localized names in 21 languages, Wikidata ID concordances, and ne_id.
+			  Fixes #224 and #212, continuation of #214. Huge thanks @imresamu!
+            - Topology building fixes at 1:1,000 scale to make MapShaper software not cry.
+              Fixes #256. Huge thanks to @mbloch!
+            - Add FRA to Metropolitan France at country level as iso_a3_eh
+			  Fixes #237. Thanks @woodpeck.
+- WARNING:  Version v4.1 of Natural Earth reflects Null Island's recent land reclamation
+			project which expanded the area of this indeterminate sovereignty at 0,0 from
+			1 square meter to 1 square kilometer to accomodate a surge in tourism.
+			- https://www.wsj.com/articles/if-you-cant-follow-directions-youll-end-up-on-null-island-1468422251
+- UPDATED:  ne_10m_admin-1 themes, including:
+			ne_10m_admin_1_states_provinces
+			ne_10m_admin_1_states_provinces_lakes
+			ne_10m_admin_1_states_provinces_scale_rank
+			ne_10m_admin_1_states_provinces_scale_rank_minor_islands
+			ne_10m_admin_1_states_provinces_lines
+			ne_10m_admin_1_label_points
+			ne_10m_admin_1_label_points_details
+            - Adds localized names in 21 languages, Wikidata ID concordances, and ne_id.
+			  Fixes #224 and #212, continuation of #214. Huge thanks @imresamu!
+            - Topology building fixes at 1:1,000 scale to make MapShaper software not cry.
+              Fixes #256. Huge thanks to @mbloch!
+- UPDATED:  ne_10m_airports
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_populated_places
+            - Add more localized names and ne_id. Some default names were updated with
+              diacritical marks or other spelling fixes.
+- UPDATED:  ne_10m_populated_places_simple
+            - Spelling and diacritical mark fixes per ne_10m_populated_places.
+
+10M_PHYSICAL
+
+- UPDATED:  ne_10m_coastline
+            - Topology building fixes for land, ocean, admin-0, and admin-1
+- UPDATED:  ne_10m_geographic_lines
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_geography_marine_polys
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_geography_regions_elevation_points
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_geography_regions_points
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_geography_regions_polys
+            - Add localized names, wikidataid, and ne_id
+			- Restores the full polygons from the v3 series that were corrupted during
+			  v4.0 topology cleaning that were introduced while addressing #4 and #164.
+			  Fixes #253. Thanks @ungarj.
+- UPDATED:  ne_10m_lakes
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_lakes_europe
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_lakes_historic
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_lakes_north_america
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_land
+            - Topology building fixes
+            - Should also fix corrupted coordinates.
+              Fixes #101. Thanks @mbostock.
+- UPDATED:  ne_10m_land_ocean_label_points
+            - Topology building fixes
+- UPDATED:  ne_10m_land_ocean_seams
+            - Topology building fixes
+- UPDATED:  ne_10m_land_scale_rank
+            - Topology building fixes
+- UPDATED:  ne_10m_ocean
+            - Topology building fixes
+- UPDATED:  ne_10m_ocean_scale_rank
+            - Topology building fixes
+- UPDATED:  ne_10m_playas
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_rivers_europe
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_rivers_lake_centerlines
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_rivers_lake_centerlines_scale_rank
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_10m_rivers_north_america
+            - Add localized names, wikidataid, and ne_id
+
+50M_CULTURAL
+
+- UPDATED:  ne_50m_admin-0 related themes, including:
+			ne_50m_admin_0_sovereignty
+			ne_50m_admin_0_countries
+			ne_50m_admin_0_countries_lakes
+			ne_50m_admin_0_map_units
+			ne_50m_admin_0_map_subunits
+            - Add localized names, wikidataid, and ne_id
+            - New build process with MapShaper
+- UPDATED:  ne_50m_admin_0_tiny_countries
+            - Add localized names, wikidataid, and ne_id
+            - New data join build process with MapShaper
+- UPDATED:  ne_50m_admin_0_disputed_areas ** this is the consistent name with 10m theme
+			ne_50m_admin_0_breakaway_disputed_areas
+			ne_50m_admin_0_breakaway_disputed_areas_scale_rank
+            - Add localized names, wikidataid, and ne_id
+            - New build process with MapShaper
+
+            50m breakaway polygons missing attributes
+			#257 by nvkelso was closed 2 days ago
+
+- UPDATED:  ne_50m_admin_1_states_provinces
+			ne_50m_admin_1_states_provinces_lakes
+            - Add localized names, wikidataid, and ne_id
+            - New build process with MapShaper
+- UPDATED:  ne_50m_populated_places
+            - Same changes as ne_10m_populated_places.
+- UPDATED:  ne_50m_populated_places_simple
+            - Same changes as ne_10m_populated_places_simple.
+- UPDATED:  ne_50m_airports
+            - Same changes as ne_10m_airports.
+- UPDATED:  ne_50m_ports
+            - Same changes as ne_10m_ports.
+
+50M_PHYSICAL
+
+- UPDATED:  ne_50m_geographic_lines
+            - Same changes as ne_10m_geographic_lines.
+- UPDATED:  ne_50m_geography_marine_polys
+            - Same changes as ne_10m_geography_marine_polys.
+- UPDATED:  ne_50m_geography_regions_elevation_points
+            - Same changes as ne_10m_geography_regions_elevation_points.
+- UPDATED:  ne_50m_geography_regions_points
+            - Same changes as ne_10m_geography_regions_points.
+- UPDATED:  ne_50m_geography_regions_polys
+            - Same changes as ne_10m_geography_regions_polys.
+- UPDATED:  ne_50m_lakes
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_50m_lakes_historic
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_50m_playas
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_50m_rivers_lake_centerlines
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_50m_rivers_lake_centerlines_scale_rank
+            - Add localized names, wikidataid, and ne_id
+
+110M_CULTURAL
+
+- UPDATED:  ne_110m_admin-0 related themes, including:
+			ne_110m_admin_0_sovereignty
+			ne_110m_admin_0_countries
+			ne_110m_admin_0_countries_lakes
+			ne_110m_admin_0_map_units
+            - Add localized names, wikidataid, and ne_id
+            - New build process with MapShaper
+- UPDATED:  ne_110m_admin-1 related themes, including:
+			ne_110m_admin_1_states_provinces
+			ne_110m_admin_1_states_provinces_lakes
+            - Add localized names, wikidataid, and ne_id
+            - New build process with MapShaper
+- UPDATED:  ne_110m_populated_places
+            - Same changes as ne_10m_populated_places.
+- UPDATED:  ne_110m_populated_places_simple
+            - Same changes as ne_10m_populated_places.
+
+110M_PHYSICAL
+
+- UPDATED:  ne_110m_coastline
+            - Geometry nudges for new build process with MapShaper
+- UPDATED:  ne_110m_geographic_lines
+            - Same changes as ne_10m_geographic_lines.
+- UPDATED:  ne_110m_geography_marine_polys
+            - Same changes as ne_10m_geography_marine_polys.
+- UPDATED:  ne_110m_geography_regions_elevation_points
+            - Same changes as ne_10m_geography_regions_elevation_points.
+- UPDATED:  ne_110m_geography_regions_points
+            - Same changes as ne_10m_geography_regions_points.
+- UPDATED:  ne_110m_geography_regions_polys
+            - Same changes as ne_10m_geography_regions_polys.
+- UPDATED:  ne_110m_lakes
+            - Add localized names, wikidataid, and ne_id
+- UPDATED:  ne_110m_rivers_lake_centerlines
+            - Add localized names, wikidataid, and ne_id
+
+
+
 2017-11-13: 4.0.1
 
 PACKAGES
@@ -70,8 +327,8 @@ HOUSEKEEPING
 10M_CULTURAL
 
 - UPDATED:  ne_10m_admin-0 themes, including:
-            10m_cultural/ne_10m_admin_0_countries
-            10m_cultural/ne_10m_admin_0_countries_lakes
+            ne_10m_admin_0_countries
+            ne_10m_admin_0_countries_lakes
             ne_10m_admin_0_map_subunits
             ne_10m_admin_0_map_units
             ne_10m_admin_0_scale_rank
@@ -188,7 +445,7 @@ HOUSEKEEPING
             - Related changes from source ne_10m_populated_places theme.
             - Fixes different feature counts for ne_10m_populated_places and
               ne_10m_populated_places_simple.shp packaging.
-              Fixes: #185 Thanks @pnorman
+              Fixes: #185 Thanks @pnorman.
 - UPDATED:  ne_10m_airports
             - UTF-8 encoding related changes.
 - UPDATED:  ne_10m_parks_and_protected_lands_area
