--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
-2019-11-11: 5.0.0
+2021-02-02: 5.0.0
 
 - Many thanks to @zerebubuth for help with disputed boundaries prototyping in Tilezen.
+- Many thanks to @elliotap, @jwva, and @mizmay for research and editing of populated
+  places and other themes.
 
 GENERAL
 
@@ -23,9 +25,9 @@ GENERAL
 	Sweden (swe), Turkey (tur), Taiwan (twn), Ukraine (ukr),
 	United States of America (usa), and Vietname (vnm).
 	Fixes #301
-2)	Expands the name localization added in v4.1 to 24 languages (up from 21) by adding
-	Hebrew (he), Ukranian (uk), and Urdu (ur). Localized names in the original 21
-	languages have also been updated.
+2)	Expands the name localization added in v4.1 to 25 languages (up from 21) by adding
+	Farsi (fa), Hebrew (he), Ukranian (uk), and Urdu (ur). Localized names in the
+	original 21 languages have also been updated.
 	Fixes #302
 3)	Renames admin-0 Macedonia features to North Macedonia to keep up with current events.
 	Fixes #290.
