--- a/CHANGELOG
+++ b/CHANGELOG
@@ -172,6 +172,7 @@ TOOLS
 - UPDATED:  ne_50m_admin_0_breakaway_disputed_areas
 			ne_50m_admin_0_breakaway_disputed_areas_scale_rank
             - Support disputed boundary point-of-view
+            - Add additional disputed areas
             - Add more localized names
 - NEW:      ne_50m_admin_0_boundary_lines_maritime_indicator_chn
             - Support disputed boundary point-of-view by adding fclass_* properties
